--- a/konga/assets/js/app/apis/views/api-plugins.html
+++ b/konga/assets/js/app/apis/views/api-plugins.html
@@ -51,7 +51,10 @@
       <raw-view data-item="item"></raw-view>
     </td>
     <th>
-      <a href  ng-click="onEditPlugin(item)">
+      <a ui-sref="apis.uma-plugin({api_id: api_id})" data-ng-if="item.name == 'kong-uma-rs'">
+        {{item.name}}
+      </a>
+      <a href data-ng-if="item.name != 'kong-uma-rs'" ng-click="onEditPlugin(item)">
         {{item.name}}
       </a>
     </th>
