Changed static link to dynamic lick and changed text for protected path #35

--- a/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
+++ b/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
@@ -67,7 +67,7 @@
               <div class="form-group has-feedback">
                 <label><span class="text text-danger">*</span>UMA Resources</label>
                 <span class="help-block error-block basic-block">Register a protected resource using below tool. For <a
-                  href="https://gluu.org/docs/oxd/3.1.2/api/#uma-2-resource-server-apis"
+                  href="https://gluu.org/docs/oxd/{{globalInfo.oxdVersion}}/api/#uma-2-resource-server-apis"
                   target="_blank">more details...</a> </span>
               </div>
               <div class="row" ng-repeat="element in modelPlugin.config.protection_document" ng-init="pIndex = $index"
@@ -91,7 +91,7 @@
                            placeholder="/path"
                            ng-model="element.path"
                            ng-required="true" data-ng-disabled="isKongUMARSPluginAdded"/>
-                    <span class="help-block error-block basic-block">The path which you want to protected by UMA</span>
+                    <span class="help-block error-block basic-block">Protect API paths by requiring specific UMA Scopes for certain methods.</span>
                   </div>
                   <div class="col-md-12">
                     <div class="row" ng-repeat="cond in element.conditions">
