Made UI for configure restricted API #65

--- a/konga/views/layout.ejs
+++ b/konga/views/layout.ejs
@@ -169,6 +169,7 @@
     <script src="js/app/consumers/credentials/create-key-auth-controller.js?r=0.8.8"></script>
     <script src="js/app/consumers/credentials/create-oauth2-controller.js?r=0.8.8"></script>
     <script src="js/app/consumers/credentials/mass-assign-credentials-controller.js?r=0.8.8"></script>
+    <script src="js/app/consumers/credentials/restrict_api/restrict-api.js?r=0.8.8"></script>
     <script src="js/app/consumers/details/consumer-details-controller.js?r=0.8.8"></script>
     <script src="js/app/consumers/groups/consumer-groups-controller.js?r=0.8.8"></script>
     <script src="js/app/consumers/groups/group.js?r=0.8.8"></script>
@@ -190,6 +191,7 @@
     <script src="js/app/core/constants/BackendConfig.js?r=0.8.8"></script>
     <script src="js/app/core/core.js?r=0.8.8"></script>
     <script src="js/app/core/dependencies/dependencies.js?r=0.8.8"></script>
+    <script src="js/app/core/directives/checklist-model.js?r=0.8.8"></script>
     <script src="js/app/core/directives/directives.js?r=0.8.8"></script>
     <script src="js/app/core/directives/konga-loader.js?r=0.8.8"></script>
     <script src="js/app/core/directives/ListSearch.js?r=0.8.8"></script>
