Design fixes for scope expression #64

--- a/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
+++ b/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
@@ -75,7 +75,7 @@
                   role="presentation"
                   data-ng-click="setActiveCategory(o)"
                   ng-class="{'active' : activeCategory == o.id}"
-                  data-ng-repeat="o in categories" style="cursor: pointer">
+                  data-ng-repeat="o in categories" style="cursor: pointer; border: 1px solid #445862;">
                   <a>{{o.title}}</a>
                 </li>
               </ul>
@@ -182,7 +182,7 @@
             </div>
             <div class="col-md-12" data-ng-show="activeCategory == 'oauth'">
               <div class="form-group has-feedback">
-                <label><span class="text text-danger">*</span>OAuth scope</label>
+                <label><span class="text text-danger">*</span>OAuth Scope Security</label>
                 <span class="help-block error-block basic-block">Protect API path by requiring specific OAuth Scopes for certain methods. Click on <code>Add Path</code> button to start. </span>
               </div>
               <div class="row" ng-repeat="element in modelPlugin.config.oauth_scope_expression"
