--- a/konga/assets/js/app/apis/partials/form-api-010.html
+++ b/konga/assets/js/app/apis/partials/form-api-010.html
@@ -140,7 +140,7 @@
                 switch-off-text="NO"
         >
         <p class="help-block">
-            Consider the <code>X-Forwarded-Proto</code> header when enforcing HTTPS only traffic. Default: <code>true</code>.
+            Consider the <code>X-Forwarded-Proto</code> header when enforcing HTTPS only traffic. Default: <code>false</code>.
         </p>
     </div>
 </div>
