Illogical validation for API name in API add section #83

--- a/konga/assets/js/app/apis/partials/form-api-09.html
+++ b/konga/assets/js/app/apis/partials/form-api-09.html
@@ -1,5 +1,5 @@
 <div class="form-group" ng-class="{'has-error' : errors.name}">
-    <label class="col-sm-4 control-label">Name <br><em><small class="help-block">optional</small></em></label>
+    <label class="col-sm-4 control-label">Name</label>
     <div class="col-sm-7">
         <input ng-model="api.name" class="form-control">
         <div class="text-danger" ng-if="errors.name" data-ng-bind="errors.name"></div>
