Handle multiple dialog issue for every module #88

--- a/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
+++ b/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
@@ -111,7 +111,7 @@
                            placeholder="/path"
                            ng-model="element.path"
                            ng-required="true"/>
-                    <span class="help-block error-block basic-block">The path which you want to protected by UMA.</span>
+                    <span class="help-block error-block basic-block">The path which you want to have protected.</span>
                   </div>
                   <div class="col-md-12">
                     <div class="row" ng-repeat="cond in element.conditions">
@@ -207,7 +207,7 @@
                            placeholder="/path"
                            ng-model="element.path"
                            ng-required="true"/>
-                    <span class="help-block error-block basic-block">The path which you want to protected by UMA.</span>
+                    <span class="help-block error-block basic-block">The path which you want to have protected.</span>
                   </div>
                   <div class="col-md-12">
                     <div class="row" ng-repeat="oauthCond in element.conditions">
