Display GG version #106

--- a/konga/assets/js/app/core/layout/partials/footer.html
+++ b/konga/assets/js/app/core/layout/partials/footer.html
@@ -4,7 +4,7 @@
             <ul class="nav navbar-nav navbar-left no-margin">
                 <li>
                     <a>
-                        <strong class="text-success">konga </strong>
+                        <strong class="text-success">Gluu Gateway {{konga_version}}</strong>
                     </a>
                 </li>
                 <!--<li class="hidden-xs"> konga_version-->
