--- a/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
+++ b/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
@@ -1,5 +1,14 @@
 <konga-loader ng-if="loading && !items.data.length"></konga-loader>
-
+<style>
+  #toggleAPIDetails:hover{
+    cursor: pointer;
+    background-color: #F1F1F1
+  }
+  #togglePluginDetails:hover{
+    cursor: pointer;
+    background-color: #F1F1F1
+  }
+</style>
 <div class="row" ng-if="!loading || items.data.length">
   <div class="col-md-12">
     <div class="col-lg-12 col-md-8">
@@ -9,11 +18,11 @@
             <div class="col-md-12">
               <table class="table table-bordered">
                 <thead>
-                <tr>
+                <tr data-toggle="collapse" data-target="#apiDetails" id="toggleAPIDetails">
                   <th colspan="2">API details</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody id="apiDetails" class="collapse">
                 <tr>
                   <th>Name</th>
                   <td>{{api.name}}</td>
@@ -32,14 +41,13 @@
                 </tr>
                 </tbody>
               </table>
-              <br/>
               <table data-ng-if="isKongUMARSPluginAdded" class="table table-bordered">
                 <thead>
-                <tr>
+                <tr data-toggle="collapse" data-target="#pluginDetails" id="togglePluginDetails">
                   <th colspan="2">Plugin details</th>
                 </tr>
                 </thead>
-                <thead>
+                <tbody id="pluginDetails" class="collapse">
                 <tr>
                   <th>OXD Id</th>
                   <td>{{::pluginConfig.oxd_id}}</td>
@@ -66,7 +74,7 @@
                                                                                                          title="{{isShowClientSecret ? 'Hide': 'Show'}}"><i
                     class="mdi mdi-eye"></i></a></td>
                 </tr>
-                </thead>
+                </tbody>
               </table>
             </div>
             <div class="col-md-12">
