--- a/konga/assets/js/app/apis/partials/form-api-010.html
+++ b/konga/assets/js/app/apis/partials/form-api-010.html
@@ -54,7 +54,7 @@
                 switch-off-text="NO"
         >
         <p class="help-block">
-            When matching an API via one of the <code>uris</code> prefixes, strip that matching prefix from the upstream URI to be requested. Default: <code>true</code>.
+            When matching an API via one of the <code>uris</code> prefixes, strip that matching prefix from the upstream URI to be requested. Default: <code>YES</code>.
         </p>
     </div>
 </div>
@@ -72,7 +72,7 @@
                 switch-off-text="NO"
         >
         <p class="help-block">
-            When matching an API via one of the <code>hosts</code> domain names, make sure the request <code>Host</code> header is forwarded to the upstream service. By default, this is <code>false</code>, and the upstream <code>Host</code> header will be extracted from the configured <code>upstream_url</code>.
+            When matching an API via one of the <code>hosts</code> domain names, make sure the request <code>Host</code> header is forwarded to the upstream service. By default, this is <code>NO</code>, and the upstream <code>Host</code> header will be extracted from the configured <code>upstream_url</code>.
         </p>
     </div>
 </div>
@@ -122,7 +122,7 @@
                 switch-off-text="NO"
         >
         <p class="help-block">
-            To be enabled if you wish to only serve an API through HTTPS, on the appropriate port (<code>8443</code> by default). Default: <code>false</code>.
+            To be enabled if you wish to only serve an API through HTTPS, on the appropriate port (<code>8443</code> by default). Default: <code>NO</code>.
         </p>
     </div>
 </div>
@@ -140,7 +140,7 @@
                 switch-off-text="NO"
         >
         <p class="help-block">
-            Consider the <code>X-Forwarded-Proto</code> header when enforcing HTTPS only traffic. Default: <code>false</code>.
+            Consider the <code>X-Forwarded-Proto</code> header when enforcing HTTPS only traffic. Default: <code>NO</code>.
         </p>
     </div>
 </div>
