--- a/konga/assets/js/app/apis/views/add-api-modal.html
+++ b/konga/assets/js/app/apis/views/add-api-modal.html
@@ -79,7 +79,7 @@
           switch-off-text="NO">
         <p class="help-block">
           When matching an API via one of the <code>uris</code> prefixes, strip that matching prefix from the upstream
-          URI to be requested. Default: <code>true</code>.
+          URI to be requested. Default: <code>YES</code>.
         </p>
       </div>
     </div>
@@ -98,7 +98,7 @@
           switch-off-text="NO">
         <p class="help-block">
           When matching an API via one of the <code>hosts</code> domain names, make sure the request <code>Host</code>
-          header is forwarded to the upstream service. By default, this is <code>false</code>, and the upstream <code>Host</code>
+          header is forwarded to the upstream service. By default, this is <code>NO</code>, and the upstream <code>Host</code>
           header will be extracted from the configured <code>upstream_url</code>.
         </p>
       </div>
@@ -162,7 +162,7 @@
           switch-off-text="NO">
         <p class="help-block">
           To be enabled if you wish to only serve an API through HTTPS, on the appropriate port (<code>8443</code> by
-          default). Default: <code>false</code>.
+          default). Default: <code>NO</code>.
         </p>
       </div>
     </div>
@@ -181,7 +181,7 @@
           switch-off-text="NO">
         <p class="help-block">
           Consider the <code>X-Forwarded-Proto</code> header when enforcing HTTPS only traffic. Default:
-          <code>false</code>.
+          <code>NO</code>.
         </p>
       </div>
     </div>
