Changed the location of the + in plugins #114

--- a/konga/assets/styles/importer.scss
+++ b/konga/assets/styles/importer.scss
@@ -532,6 +532,10 @@ label {
         font-size: 2em !important;
         vertical-align: top !important;
       }
+      .plugin_i {
+        font-size: 1em !important;
+        vertical-align: top !important;
+      }
     }
   }
 
