--- a/konga/assets/js/app/apis/views/add-api-plugin-modal.html
+++ b/konga/assets/js/app/apis/views/add-api-plugin-modal.html
@@ -46,7 +46,7 @@
                                             data-ng-class="{'text-white' : existingPlugins.indexOf(key) > -1, 'btn-primary' : existingPlugins.indexOf(key) < 0}"
                                             class="btn btn-link btn-icon"
                                             angular-ripple data-ng-click="onAddPlugin(key)">
-                                        <i class="mdi mdi-plus"></i>
+                                        <i class="mdi mdi-plus plugin_i"></i>
                                     </button>
                                     <i class="mdi mdi-check-all" data-ng-if="existingPlugins.indexOf(key) > -1"></i>
                                 </div>
