--- a/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
+++ b/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
@@ -156,7 +156,7 @@
                         <div class="col-md-12" id="dyScope{{pIndex}}{{$index}}0" data-ng-if="isKongUMARSPluginAdded">
                         </div>
                         <div class="col-md-12" id="dyScope{{pIndex}}{{$index}}0" data-ng-if="!isKongUMARSPluginAdded">
-                          <input type="radio" value="or" name="condition{{pIndex}}{{$index}}0">or |
+                          <input type="radio" value="or" name="condition{{pIndex}}{{$index}}0" checked>or |
                           <input type="radio" value="and" name="condition{{pIndex}}{{$index}}0">and |
                           <input type="radio" value="not" name="condition{{pIndex}}{{$index}}0">not
                           <button type="button" class="btn btn-xs btn-success" data-add="rule"
@@ -254,7 +254,7 @@
                         </div>
                         <div class="col-md-12" id="dyOauthScope{{pIndex}}{{$index}}0"
                              data-ng-if="!isKongUMARSPluginAdded">
-                          <input type="radio" value="or" name="oauthCondition{{pIndex}}{{$index}}0">or |
+                          <input type="radio" value="or" name="oauthCondition{{pIndex}}{{$index}}0" checked>or |
                           <input type="radio" value="and" name="oauthCondition{{pIndex}}{{$index}}0">and |
                           <input type="radio" value="not" name="oauthCondition{{pIndex}}{{$index}}0">not
                           <button type="button" class="btn btn-xs btn-success" data-add="rule"
