--- a/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
+++ b/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
@@ -124,7 +124,7 @@
                     <span class="help-block error-block basic-block" title="Kong proxy point">http://{{info.hostname}}:{{info.configuration.proxy_port}}</span>
                   </div>
                   <div class="form-group has-feedback col-md-8"
-                       ng-class="{'pathValidationClass': PluginForm['path'+$index].$invalid && (PluginForm['path'+$index].$dirty || PluginForm.$submitted)}">
+                       ng-class="{'pathValidationClass': PluginForm['path'+$index].$invalid}">
                     <input type="text" class="form-control" id="path{{$index}}" name="path{{$index}}"
                            title="Enter path"
                            placeholder="/path"
@@ -220,7 +220,7 @@
                     <span class="help-block error-block basic-block" title="Kong proxy point">http://{{info.hostname}}:{{info.configuration.proxy_port}}</span>
                   </div>
                   <div class="form-group has-feedback col-md-8"
-                       ng-class="{'pathValidationClass': PluginForm['oauthPath'+$index].$invalid && (PluginForm['oauthPath'+$index].$dirty || PluginForm.$submitted)}">
+                       ng-class="{'pathValidationClass': PluginForm['oauthPath'+$index].$invalid}">
                     <input type="text" class="form-control" id="oauthPath{{$index}}" name="oauthPath{{$index}}"
                            title="Enter path"
                            placeholder="/path"
