Updated text for placeholder #156

--- a/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
+++ b/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
@@ -140,7 +140,7 @@
                             <tags-input ng-model="cond.httpMethods"
                                         id="httpMethods{{pIndex}}{{$index}}"
                                         add-from-autocomplete-only="true"
-                                        placeholder="Enter http Methods" required>
+                                        placeholder="Enter HTTP methods" required>
                               <auto-complete source="loadMethods($query)"
                                              min-length="0"
                                              debounce-delay="0"></auto-complete>
@@ -236,7 +236,7 @@
                             <tags-input ng-model="oauthCond.httpMethods"
                                         id="oauthHttpMethods{{pIndex}}{{$index}}"
                                         add-from-autocomplete-only="true"
-                                        placeholder="Enter http Methods" required>
+                                        placeholder="Enter HTTP methods" required>
                               <auto-complete source="loadMethods($query)"
                                              min-length="0"
                                              debounce-delay="0"></auto-complete>
